--- a/index.html
+++ b/index.html
@@ -1,141 +1,139 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Tour Matterport + API Pública (Evoluído)</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: Arial, sans-serif;
-        }
-        #container {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        #overlay {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            background: rgba(0,0,0,0.7);
-            color: #fff;
-            padding: 15px;
-            font-size: 16px;
-            border-radius: 10px;
-            z-index: 999;
-            min-width: 220px;
-        }
-        #chart-container {
-            position: absolute;
-            bottom: 20px;
-            left: 20px;
-            width: 300px;
-            height: 200px;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 10px;
-            padding: 10px;
-            z-index: 999;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>RBIM - Painel Inteligente</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+      background-color: #111;
+      color: #eee;
+    }
+    #tour {
+      flex: 2;
+      position: relative;
+    }
+    #dashboard {
+      flex: 1;
+      background: #1b1b1b;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    canvas {
+      background: #222;
+      border-radius: 10px;
+      padding: 10px;
+    }
+    .gauge {
+      width: 200px;
+      height: 200px;
+    }
+  </style>
 </head>
 <body>
-    <div id="container">
-        <iframe id="showcase" 
-            src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" 
-            allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;">
-        </iframe>
+  <div id="tour">
+    <iframe id="showcase" src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" allowfullscreen></iframe>
+  </div>
+  <div id="dashboard">
+    <canvas id="tempGauge" class="gauge"></canvas>
+    <canvas id="humidityGauge" class="gauge"></canvas>
+    <canvas id="tempChart" width="300" height="150"></canvas>
+  </div>
 
-        <div id="overlay">
-            <div>🌡️ Temp Atual: <span id="tempAtual">--</span> °C</div>
-            <div>💧 Umidade: <span id="umidadeAtual">--</span> %</div>
-        </div>
+<script>
+const tempChartCtx = document.getElementById('tempChart').getContext('2d');
+const tempGaugeCtx = document.getElementById('tempGauge').getContext('2d');
+const humidityGaugeCtx = document.getElementById('humidityGauge').getContext('2d');
 
-        <div id="chart-container">
-            <canvas id="tempChart"></canvas>
-        </div>
-    </div>
+const tempChart = new Chart(tempChartCtx, {
+  type: 'line',
+  data: {
+    labels: [],
+    datasets: [{
+      label: 'Temperatura (°C)',
+      data: [],
+      backgroundColor: 'rgba(0, 172, 193, 0.2)',
+      borderColor: 'rgba(0, 172, 193, 1)',
+      borderWidth: 2,
+      tension: 0.4
+    }]
+  },
+  options: {
+    responsive: true,
+    scales: { y: { beginAtZero: false } },
+    plugins: { legend: { labels: { color: 'white' } } }
+  }
+});
 
-    <script>
-        const showcase = document.getElementById('showcase');
-        const tempSpan = document.getElementById('tempAtual');
-        const umidadeSpan = document.getElementById('umidadeAtual');
-        const overlay = document.getElementById('overlay');
+const tempGauge = new Chart(tempGaugeCtx, {
+  type: 'doughnut',
+  data: {
+    labels: ['Temperatura', 'Faltante'],
+    datasets: [{
+      data: [0, 50],
+      backgroundColor: ['#f44336', '#555']
+    }]
+  },
+  options: { plugins: { legend: { display: false } }, cutout: '70%' }
+});
 
-        const tempChartCtx = document.getElementById('tempChart').getContext('2d');
-        const tempChart = new Chart(tempChartCtx, {
-            type: 'line',
-            data: {
-                labels: [],
-                datasets: [{
-                    label: 'Temperatura (°C)',
-                    data: [],
-                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                    borderColor: 'rgba(255, 99, 132, 1)',
-                    borderWidth: 2,
-                    tension: 0.4
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    y: {
-                        beginAtZero: false
-                    }
-                }
-            }
-        });
+const humidityGauge = new Chart(humidityGaugeCtx, {
+  type: 'doughnut',
+  data: {
+    labels: ['Umidade', 'Faltante'],
+    datasets: [{
+      data: [0, 100],
+      backgroundColor: ['#2196f3', '#555']
+    }]
+  },
+  options: { plugins: { legend: { display: false } }, cutout: '70%' }
+});
 
-        window.addEventListener('message', function(event) {
-            if (event.data.type === 'showcaseReady') {
-                console.log('Tour carregado!');
-                atualizarDados();
-                setInterval(atualizarDados, 300000); // Atualiza a cada 5 minutos
-            }
-        });
+function atualizarDados() {
+  fetch('https://api.openweathermap.org/data/2.5/weather?q=Goiania,BR&appid=d9da98b3560b007a19706897feaa7416&units=metric')
+    .then(response => response.json())
+    .then(data => {
+      const tempAtual = data.main.temp;
+      const umidadeAtual = data.main.humidity;
 
-        function atualizarDados() {
-            fetch('https://api.open-meteo.com/v1/forecast?latitude=-23.55&longitude=-46.63&current_weather=true')
-                .then(response => response.json())
-                .then(data => {
-                    const tempAtual = data.current_weather.temperature;
-                    const umidadeAtual = data.current_weather.relativehumidity ?? 60; // Valor fictício para testes
+      const agora = new Date().toLocaleTimeString();
+      tempChart.data.labels.push(agora);
+      tempChart.data.datasets[0].data.push(tempAtual);
+      if (tempChart.data.labels.length > 10) {
+        tempChart.data.labels.shift();
+        tempChart.data.datasets[0].data.shift();
+      }
+      tempChart.update();
 
-                    tempSpan.textContent = tempAtual;
-                    umidadeSpan.textContent = umidadeAtual;
+      tempGauge.data.datasets[0].data[0] = tempAtual;
+      tempGauge.data.datasets[0].data[1] = 50 - tempAtual;
+      tempGauge.update();
 
-                    // Atualiza gráfico
-                    const agora = new Date().toLocaleTimeString();
-                    tempChart.data.labels.push(agora);
-                    tempChart.data.datasets[0].data.push(tempAtual);
-                    if (tempChart.data.labels.length > 10) {
-                        tempChart.data.labels.shift();
-                        tempChart.data.datasets[0].data.shift();
-                    }
-                    tempChart.update();
+      humidityGauge.data.datasets[0].data[0] = umidadeAtual;
+      humidityGauge.data.datasets[0].data[1] = 100 - umidadeAtual;
+      humidityGauge.update();
+    })
+    .catch(error => console.error('Erro ao buscar dados:', error));
+}
 
-                    // Alerta visual
-                    if (tempAtual >= 28) {
-                        overlay.style.backgroundColor = 'rgba(255,0,0,0.8)';
-                    } else if (tempAtual >= 24) {
-                        overlay.style.backgroundColor = 'rgba(255,165,0,0.8)';
-                    } else {
-                        overlay.style.backgroundColor = 'rgba(0,0,0,0.7)';
-                    }
-                })
-                .catch(error => {
-                    console.error("Erro ao puxar dados:", error);
-                    tempSpan.textContent = "--";
-                    umidadeSpan.textContent = "--";
-                });
-        }
-    </script>
+setInterval(atualizarDados, 60000);
+window.onload = atualizarDados;
+</script>
+
 </body>
 </html>
 
