--- a/index.html
+++ b/index.html
@@ -1,175 +1,173 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>RBIM - Painel V2 Inteligente</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RBIM Digital Twin V3</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             margin: 0;
+            padding: 0;
+            background: url('./img/bg_rbim_tjgo.png') no-repeat center center fixed;
+            background-size: cover;
             font-family: Arial, sans-serif;
+        }
+        #container {
             display: flex;
             height: 100vh;
-            overflow: hidden;
-            background-color: #111;
-            color: #eee;
+            width: 100vw;
         }
-        #tour {
+        #matterport {
             flex: 2;
-            position: relative;
+            background: rgba(255, 255, 255, 0.7);
+            overflow: hidden;
         }
         #dashboard {
             flex: 1;
-            background: #1b1b1b;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-evenly;
-            padding: 20px;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        .gauge-container {
-            position: relative;
-            width: 220px;
-            height: 220px;
-        }
-        .gauge-container canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
-        .gauge-text {
-            position: absolute;
-            width: 100%;
-            height: 100%;
+            background: rgba(255, 255, 255, 0.8);
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            font-size: 22px;
-            font-weight: bold;
-            color: white;
+            gap: 20px;
+            padding: 20px;
+        }
+        .gauge {
+            width: 200px;
+            height: 200px;
         }
         #tempChart {
-            width: 90%;
-            max-width: 400px;
-            background: #222;
-            border-radius: 10px;
-            padding: 10px;
+            width: 300px;
+            height: 150px;
         }
     </style>
 </head>
 <body>
-<div id="tour">
-    <iframe id="showcase" src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" allowfullscreen></iframe>
-</div>
-
-<div id="dashboard">
-    <div class="gauge-container">
-        <canvas id="tempGauge"></canvas>
-        <div class="gauge-text" id="tempText">-- °C</div>
+    <div id="container">
+        <div id="matterport">
+            <iframe id="showcase" src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" width="100%" height="100%" allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;"></iframe>
+        </div>
+        <div id="dashboard">
+            <canvas id="tempGauge" class="gauge"></canvas>
+            <canvas id="humidityGauge" class="gauge"></canvas>
+            <canvas id="tempChart"></canvas>
+        </div>
     </div>
-    <div class="gauge-container">
-        <canvas id="humidityGauge"></canvas>
-        <div class="gauge-text" id="humidityText">-- %</div>
-    </div>
-    <canvas id="tempChart"></canvas>
-</div>
 
-<script>
-const tempChartCtx = document.getElementById('tempChart').getContext('2d');
-const tempGaugeCtx = document.getElementById('tempGauge').getContext('2d');
-const humidityGaugeCtx = document.getElementById('humidityGauge').getContext('2d');
-const tempText = document.getElementById('tempText');
-const humidityText = document.getElementById('humidityText');
-
-const tempChart = new Chart(tempChartCtx, {
-    type: 'line',
-    data: {
-        labels: [],
-        datasets: [{
-            label: 'Temperatura (°C)',
-            data: [],
-            borderColor: 'rgba(0, 172, 193, 1)',
-            backgroundColor: 'rgba(0, 172, 193, 0.2)',
-            borderWidth: 2,
-            tension: 0.4
-        }]
-    },
-    options: {
-        responsive: true,
-        scales: { y: { beginAtZero: false, ticks: { color: 'white' } }, x: { ticks: { color: 'white' } }},
-        plugins: { legend: { labels: { color: 'white' } } }
-    }
-});
-
-const tempGauge = new Chart(tempGaugeCtx, {
-    type: 'doughnut',
-    data: {
-        datasets: [{
-            data: [0, 50],
-            backgroundColor: ['#ff5722', '#555']
-        }]
-    },
-    options: {
-        cutout: '70%',
-        plugins: { legend: { display: false } },
-        animation: { animateRotate: true }
-    }
-});
-
-const humidityGauge = new Chart(humidityGaugeCtx, {
-    type: 'doughnut',
-    data: {
-        datasets: [{
-            data: [0, 100],
-            backgroundColor: ['#2196f3', '#555']
-        }]
-    },
-    options: {
-        cutout: '70%',
-        plugins: { legend: { display: false } },
-        animation: { animateRotate: true }
-    }
-});
-
-function atualizarDados() {
-    fetch('https://api.openweathermap.org/data/2.5/weather?q=Goiania,BR&appid=d9da98b3560b007a19706897feaa7416&units=metric')
-        .then(response => response.json())
-        .then(data => {
-            const tempAtual = data.main.temp;
-            const umidadeAtual = data.main.humidity;
-
-            const agora = new Date().toLocaleTimeString();
-            tempChart.data.labels.push(agora);
-            tempChart.data.datasets[0].data.push(tempAtual);
-            if (tempChart.data.labels.length > 10) {
-                tempChart.data.labels.shift();
-                tempChart.data.datasets[0].data.shift();
+    <script>
+        const tempGauge = new Chart(document.getElementById('tempGauge'), {
+            type: 'doughnut',
+            data: {
+                labels: ['Temperatura', 'Faltante'],
+                datasets: [{
+                    data: [0, 100],
+                    backgroundColor: ['#FF5733', '#D3D3D3']
+                }]
+            },
+            options: {
+                cutout: '70%',
+                plugins: {
+                    tooltip: { enabled: false },
+                    legend: { display: false },
+                    title: {
+                        display: true,
+                        text: '-- °C',
+                        font: { size: 20 }
+                    }
+                }
             }
-            tempChart.update();
+        });
 
-            tempGauge.data.datasets[0].data[0] = tempAtual;
-            tempGauge.data.datasets[0].data[1] = 50 - tempAtual;
-            tempGauge.update();
-            tempText.textContent = tempAtual.toFixed(1) + ' °C';
+        const humidityGauge = new Chart(document.getElementById('humidityGauge'), {
+            type: 'doughnut',
+            data: {
+                labels: ['Umidade', 'Faltante'],
+                datasets: [{
+                    data: [0, 100],
+                    backgroundColor: ['#3498db', '#D3D3D3']
+                }]
+            },
+            options: {
+                cutout: '70%',
+                plugins: {
+                    tooltip: { enabled: false },
+                    legend: { display: false },
+                    title: {
+                        display: true,
+                        text: '-- %',
+                        font: { size: 20 }
+                    }
+                }
+            }
+        });
 
-            humidityGauge.data.datasets[0].data[0] = umidadeAtual;
-            humidityGauge.data.datasets[0].data[1] = 100 - umidadeAtual;
-            humidityGauge.update();
-            humidityText.textContent = umidadeAtual + ' %';
-        })
-        .catch(error => console.error('Erro ao buscar dados:', error));
-}
+        const tempChart = new Chart(document.getElementById('tempChart'), {
+            type: 'line',
+            data: {
+                labels: [],
+                datasets: [{
+                    label: 'Temperatura (°C)',
+                    data: [],
+                    borderColor: '#3498db',
+                    fill: false
+                }]
+            },
+            options: {
+                scales: {
+                    x: { display: true },
+                    y: { min: 20, max: 40 }
+                }
+            }
+        });
 
-setInterval(atualizarDados, 60000);
-window.onload = atualizarDados;
-</script>
+        async function updateDashboard() {
+            try {
+                const response = await fetch('https://api.openweathermap.org/data/2.5/weather?q=Goiania,BR&appid=d9da98b3560b007a19706897feaa7416&units=metric');
+                const data = await response.json();
+                const temp = data.main.temp;
+                const humidity = data.main.humidity;
 
+                tempGauge.data.datasets[0].data[0] = temp;
+                tempGauge.data.datasets[0].data[1] = 100 - temp;
+                tempGauge.options.plugins.title.text = temp.toFixed(1) + ' °C';
+
+                humidityGauge.data.datasets[0].data[0] = humidity;
+                humidityGauge.data.datasets[0].data[1] = 100 - humidity;
+                humidityGauge.options.plugins.title.text = humidity.toFixed(0) + ' %';
+
+                tempGauge.update();
+                humidityGauge.update();
+
+                const now = new Date();
+                const time = now.getHours() + ':' + now.getMinutes() + ':' + now.getSeconds();
+
+                tempChart.data.labels.push(time);
+                tempChart.data.datasets[0].data.push(temp);
+
+                if (tempChart.data.labels.length > 10) {
+                    tempChart.data.labels.shift();
+                    tempChart.data.datasets[0].data.shift();
+                }
+
+                tempChart.update();
+
+                if (temp > 28) {
+                    alert('🚨 Alerta: Temperatura acima de 28°C! Atual: ' + temp.toFixed(1) + '°C');
+                    tempGauge.data.datasets[0].backgroundColor[0] = 'red';
+                } else {
+                    tempGauge.data.datasets[0].backgroundColor[0] = '#FF5733';
+                }
+
+            } catch (error) {
+                console.error('Erro ao buscar dados da API:', error);
+            }
+        }
+
+        updateDashboard();
+        setInterval(updateDashboard, 60000); // Atualiza a cada 60 segundos
+    </script>
 </body>
 </html>
+
 
