--- a/index.html
+++ b/index.html
@@ -1,68 +1,101 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RBIM Digital Twin V3</title>
+    <title>RBIM | Monitoramento IoT + Tour Virtual</title>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <style>
         body {
             margin: 0;
-            padding: 0;
-            background: url('./img/bg_rbim_tjgo.png') no-repeat center center fixed;
-            background-size: cover;
+            background: #ffffff;
             font-family: Arial, sans-serif;
-        }
-        #container {
             display: flex;
             height: 100vh;
-            width: 100vw;
-        }
-        #matterport {
-            flex: 2;
-            background: rgba(255, 255, 255, 0.7);
             overflow: hidden;
         }
+        #container {
+            flex: 6;
+            position: relative;
+        }
         #dashboard {
-            flex: 1;
-            background: rgba(255, 255, 255, 0.8);
+            flex: 4;
+            background: #f5f5f5;
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 10px;
+            overflow-y: auto;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+        .logo-container {
+            display: flex;
             justify-content: center;
-            gap: 20px;
-            padding: 20px;
+            align-items: center;
+            gap: 15px;
+            margin-bottom: 10px;
+        }
+        .logo-container img {
+            height: 50px;
         }
         .gauge {
             width: 200px;
             height: 200px;
+            margin: 10px 0;
         }
-        #tempChart {
-            width: 300px;
-            height: 150px;
+        #textos-explicativos {
+            margin-top: 20px;
+            padding: 10px;
+            text-align: center;
+            font-size: 14px;
+            color: #333;
         }
     </style>
 </head>
+
 <body>
+
     <div id="container">
-        <div id="matterport">
-            <iframe id="showcase" src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" width="100%" height="100%" allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;"></iframe>
+        <iframe id="showcase"
+            src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1"
+            allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;">
+        </iframe>
+    </div>
+
+    <div id="dashboard">
+        <div class="logo-container">
+            <img src="img/logorbim.png" alt="Logo RBIM">
+            <img src="img/logotjgo.png" alt="Logo TJ-GO">
         </div>
-        <div id="dashboard">
-            <canvas id="tempGauge" class="gauge"></canvas>
-            <canvas id="humidityGauge" class="gauge"></canvas>
-            <canvas id="tempChart"></canvas>
+
+        <canvas id="tempGauge" class="gauge"></canvas>
+        <canvas id="humGauge" class="gauge"></canvas>
+
+        <div id="textos-explicativos">
+            <p><strong>Monitoramento em tempo real.</strong></p>
+            <p><strong>Cores:</strong> Cinza (Referência), Vermelho (Temperatura Atual), Azul (Umidade Atual).</p>
+            <p><strong>Alerta:</strong> Se temperatura passar de 28°C, aviso sonoro e popup são disparados.</p>
         </div>
     </div>
 
     <script>
+        const apiKey = "d9da98b3560b007a19706897feaa7416"; // sua API OpenWeather
+        const cidade = "Goiânia,BR";
+
         const tempGauge = new Chart(document.getElementById('tempGauge'), {
             type: 'doughnut',
             data: {
-                labels: ['Temperatura', 'Faltante'],
+                labels: ['Temperatura'],
                 datasets: [{
                     data: [0, 100],
-                    backgroundColor: ['#FF5733', '#D3D3D3']
+                    backgroundColor: ['#FF5733', '#D3D3D3'],
+                    borderWidth: 2
                 }]
             },
             options: {
@@ -73,19 +106,21 @@
                     title: {
                         display: true,
                         text: '-- °C',
-                        font: { size: 20 }
+                        color: '#000',
+                        font: { size: 24 }
                     }
                 }
             }
         });
 
-        const humidityGauge = new Chart(document.getElementById('humidityGauge'), {
+        const humGauge = new Chart(document.getElementById('humGauge'), {
             type: 'doughnut',
             data: {
-                labels: ['Umidade', 'Faltante'],
+                labels: ['Umidade'],
                 datasets: [{
                     data: [0, 100],
-                    backgroundColor: ['#3498db', '#D3D3D3']
+                    backgroundColor: ['#3498DB', '#D3D3D3'],
+                    borderWidth: 2
                 }]
             },
             options: {
@@ -96,78 +131,39 @@
                     title: {
                         display: true,
                         text: '-- %',
-                        font: { size: 20 }
+                        color: '#000',
+                        font: { size: 24 }
                     }
                 }
             }
         });
 
-        const tempChart = new Chart(document.getElementById('tempChart'), {
-            type: 'line',
-            data: {
-                labels: [],
-                datasets: [{
-                    label: 'Temperatura (°C)',
-                    data: [],
-                    borderColor: '#3498db',
-                    fill: false
-                }]
-            },
-            options: {
-                scales: {
-                    x: { display: true },
-                    y: { min: 20, max: 40 }
-                }
-            }
-        });
+        async function atualizarDados() {
+            const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${cidade}&units=metric&appid=${apiKey}`);
+            const data = await response.json();
+            const temperatura = data.main.temp;
+            const umidade = data.main.humidity;
 
-        async function updateDashboard() {
-            try {
-                const response = await fetch('https://api.openweathermap.org/data/2.5/weather?q=Goiania,BR&appid=d9da98b3560b007a19706897feaa7416&units=metric');
-                const data = await response.json();
-                const temp = data.main.temp;
-                const humidity = data.main.humidity;
+            tempGauge.data.datasets[0].data = [temperatura, 100 - temperatura];
+            tempGauge.options.plugins.title.text = temperatura.toFixed(1) + ' °C';
+            tempGauge.update();
 
-                tempGauge.data.datasets[0].data[0] = temp;
-                tempGauge.data.datasets[0].data[1] = 100 - temp;
-                tempGauge.options.plugins.title.text = temp.toFixed(1) + ' °C';
+            humGauge.data.datasets[0].data = [umidade, 100 - umidade];
+            humGauge.options.plugins.title.text = umidade + ' %';
+            humGauge.update();
 
-                humidityGauge.data.datasets[0].data[0] = humidity;
-                humidityGauge.data.datasets[0].data[1] = 100 - humidity;
-                humidityGauge.options.plugins.title.text = humidity.toFixed(0) + ' %';
-
-                tempGauge.update();
-                humidityGauge.update();
-
-                const now = new Date();
-                const time = now.getHours() + ':' + now.getMinutes() + ':' + now.getSeconds();
-
-                tempChart.data.labels.push(time);
-                tempChart.data.datasets[0].data.push(temp);
-
-                if (tempChart.data.labels.length > 10) {
-                    tempChart.data.labels.shift();
-                    tempChart.data.datasets[0].data.shift();
-                }
-
-                tempChart.update();
-
-                if (temp > 28) {
-                    alert('🚨 Alerta: Temperatura acima de 28°C! Atual: ' + temp.toFixed(1) + '°C');
-                    tempGauge.data.datasets[0].backgroundColor[0] = 'red';
-                } else {
-                    tempGauge.data.datasets[0].backgroundColor[0] = '#FF5733';
-                }
-
-            } catch (error) {
-                console.error('Erro ao buscar dados da API:', error);
+            if (temperatura >= 28) {
+                alert("🚨 ALERTA: Temperatura alta detectada! (" + temperatura.toFixed(1) + "°C)");
             }
         }
 
-        updateDashboard();
-        setInterval(updateDashboard, 60000); // Atualiza a cada 60 segundos
+        setInterval(atualizarDados, 30000); // Atualiza a cada 30 segundos
+        atualizarDados(); // Atualiza na abertura
     </script>
+
 </body>
+</html>
+
 </html>
 
 
