--- a/index.html
+++ b/index.html
@@ -1,169 +1,169 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RBIM | Monitoramento IoT + Tour Virtual</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <style>
-        body {
-            margin: 0;
-            background: #ffffff;
-            font-family: Arial, sans-serif;
-            display: flex;
-            height: 100vh;
-            overflow: hidden;
-        }
-        #container {
-            flex: 6;
-            position: relative;
-        }
-        #dashboard {
-            flex: 4;
-            background: #f5f5f5;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 10px;
-            overflow-y: auto;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-        .logo-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 10px;
-        }
-        .logo-container img {
-            height: 50px;
-        }
-        .gauge {
-            width: 200px;
-            height: 200px;
-            margin: 10px 0;
-        }
-        #textos-explicativos {
-            margin-top: 20px;
-            padding: 10px;
-            text-align: center;
-            font-size: 14px;
-            color: #333;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Painel de Monitoramento - Sede TJ-GO (RBIM CONSULTORIA)</title>
+  <link rel="icon" type="image/png" href="img/logorbim.png">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: row;
+      background: #000;
+      font-family: Arial, sans-serif;
+    }
+    #matterport {
+      flex: 6;
+      height: 100%;
+    }
+    #dashboard {
+      flex: 4;
+      background: #121212;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 20px;
+    }
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .top-bar {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+    .logos img {
+      height: 40px;
+      margin-left: 10px;
+    }
+    h1 {
+      font-size: 16px;
+      font-weight: normal;
+    }
+    .gauge-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 10px 0;
+    }
+    canvas {
+      margin: 10px;
+    }
+    .info-text {
+      font-size: 14px;
+      color: #bbb;
+      text-align: center;
+      margin-top: 20px;
+      line-height: 1.4;
+    }
+  </style>
 </head>
-
 <body>
 
-    <div id="container">
-        <iframe id="showcase"
-            src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1"
-            allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;">
-        </iframe>
+<div id="matterport">
+  <iframe src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" allowfullscreen></iframe>
+</div>
+
+<div id="dashboard">
+  <div class="top-bar">
+    <h1>Painel de Monitoramento - Sede TJ-GO (RBIM CONSULTORIA)</h1>
+    <div class="logos">
+      <img src="img/logorbim.png" alt="Logo RBIM">
+      <img src="img/logotjgo.png" alt="Logo TJGO">
     </div>
+  </div>
 
-    <div id="dashboard">
-        <div class="logo-container">
-            <img src="img/logorbim.png" alt="Logo RBIM">
-            <img src="img/logotjgo.png" alt="Logo TJ-GO">
-        </div>
+  <div class="gauge-container">
+    <canvas id="tempGauge" width="200" height="200"></canvas>
+    <canvas id="humidityGauge" width="200" height="200"></canvas>
+  </div>
 
-        <canvas id="tempGauge" class="gauge"></canvas>
-        <canvas id="humGauge" class="gauge"></canvas>
+  <div class="info-text">
+    <p><strong>Monitoramento em tempo real</strong></p>
+    <p>🔵 Azul: Umidade Atual | 🔴 Vermelho: Temperatura Atual</p>
+    <p>🚨 Alerta visual e sonoro acima de 28°C</p>
+  </div>
+</div>
 
-        <div id="textos-explicativos">
-            <p><strong>Monitoramento em tempo real.</strong></p>
-            <p><strong>Cores:</strong> Cinza (Referência), Vermelho (Temperatura Atual), Azul (Umidade Atual).</p>
-            <p><strong>Alerta:</strong> Se temperatura passar de 28°C, aviso sonoro e popup são disparados.</p>
-        </div>
-    </div>
+<script>
+const apiKey = "d9da98b3560b007a19706897feaa7416";
+const cidade = "Goiania,BR";
 
-    <script>
-        const apiKey = "d9da98b3560b007a19706897feaa7416"; // sua API OpenWeather
-        const cidade = "Goiânia,BR";
+const tempCtx = document.getElementById('tempGauge').getContext('2d');
+const humCtx = document.getElementById('humidityGauge').getContext('2d');
 
-        const tempGauge = new Chart(document.getElementById('tempGauge'), {
-            type: 'doughnut',
-            data: {
-                labels: ['Temperatura'],
-                datasets: [{
-                    data: [0, 100],
-                    backgroundColor: ['#FF5733', '#D3D3D3'],
-                    borderWidth: 2
-                }]
-            },
-            options: {
-                cutout: '70%',
-                plugins: {
-                    tooltip: { enabled: false },
-                    legend: { display: false },
-                    title: {
-                        display: true,
-                        text: '-- °C',
-                        color: '#000',
-                        font: { size: 24 }
-                    }
-                }
-            }
-        });
+const tempGauge = new Chart(tempCtx, {
+  type: 'doughnut',
+  data: {
+    datasets: [{
+      data: [0, 100],
+      backgroundColor: ['#FF5733', '#2c2c2c']
+    }]
+  },
+  options: {
+    cutout: '75%',
+    plugins: { legend: { display: false } }
+  }
+});
 
-        const humGauge = new Chart(document.getElementById('humGauge'), {
-            type: 'doughnut',
-            data: {
-                labels: ['Umidade'],
-                datasets: [{
-                    data: [0, 100],
-                    backgroundColor: ['#3498DB', '#D3D3D3'],
-                    borderWidth: 2
-                }]
-            },
-            options: {
-                cutout: '70%',
-                plugins: {
-                    tooltip: { enabled: false },
-                    legend: { display: false },
-                    title: {
-                        display: true,
-                        text: '-- %',
-                        color: '#000',
-                        font: { size: 24 }
-                    }
-                }
-            }
-        });
+const humidityGauge = new Chart(humCtx, {
+  type: 'doughnut',
+  data: {
+    datasets: [{
+      data: [0, 100],
+      backgroundColor: ['#3498DB', '#2c2c2c']
+    }]
+  },
+  options: {
+    cutout: '75%',
+    plugins: { legend: { display: false } }
+  }
+});
 
-        async function atualizarDados() {
-            const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${cidade}&units=metric&appid=${apiKey}`);
-            const data = await response.json();
-            const temperatura = data.main.temp;
-            const umidade = data.main.humidity;
+function beep() {
+  const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  const oscillator = audioCtx.createOscillator();
+  const gainNode = audioCtx.createGain();
 
-            tempGauge.data.datasets[0].data = [temperatura, 100 - temperatura];
-            tempGauge.options.plugins.title.text = temperatura.toFixed(1) + ' °C';
-            tempGauge.update();
+  oscillator.connect(gainNode);
+  gainNode.connect(audioCtx.destination);
+  oscillator.type = 'sine';
+  oscillator.frequency.value = 1000;
+  oscillator.start();
+  setTimeout(() => { oscillator.stop(); }, 200);
+}
 
-            humGauge.data.datasets[0].data = [umidade, 100 - umidade];
-            humGauge.options.plugins.title.text = umidade + ' %';
-            humGauge.update();
+async function atualizarDados() {
+  const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${cidade}&units=metric&appid=${apiKey}`);
+  const data = await response.json();
+  const temp = data.main.temp;
+  const hum = data.main.humidity;
 
-            if (temperatura >= 28) {
-                alert("🚨 ALERTA: Temperatura alta detectada! (" + temperatura.toFixed(1) + "°C)");
-            }
-        }
+  tempGauge.data.datasets[0].data = [temp, 100 - temp];
+  tempGauge.update();
 
-        setInterval(atualizarDados, 30000); // Atualiza a cada 30 segundos
-        atualizarDados(); // Atualiza na abertura
-    </script>
+  humidityGauge.data.datasets[0].data = [hum, 100 - hum];
+  humidityGauge.update();
+
+  if (temp > 28) {
+    alert(`🚨 ALERTA: Temperatura alta detectada! Atual: ${temp.toFixed(1)}°C`);
+    beep();
+  }
+}
+
+atualizarDados();
+setInterval(atualizarDados, 30000);
+</script>
 
 </body>
 </html>
-
-</html>
-
 
