--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
   <div class="container">
     <div class="left">
-      <iframe src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1&applicationKey=SUA-API-KEY" allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;"></iframe>
+      <iframe src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;"></iframe>
     </div>
     <div class="right">
       <div class="logos">
